// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppHeader /> Buttons story renders snapshot 1`] = `
<header
  class="app-header app-header--orientation-horizontal"
>
  <div
    class="app-header__titles"
  >
    <div
      class="app-header-title__title"
    >
      <span
        class="text text--headline-md"
      >
        Evaluators
      </span>
    </div>
    <div
      class="app-header-title__sub-title"
    >
      <span
        class="text text--body-lg"
      >
        Playground
      </span>
    </div>
  </div>
  <div
    class="app-header__nav-groups"
  >
    <nav
      aria-label="group-1"
    >
      <ul
        class="app-header-nav-group app-header-nav-group--orientation-horizontal"
      >
        <li>
          <button
            class="app-header__nav-item app-header__nav-item--button app-header__nav-item--icon-layout-none"
          >
            <span
              class="text text--label-lg"
            >
              English Language Arts
            </span>
          </button>
        </li>
        <li>
          <button
            class="app-header__nav-item app-header__nav-item--button app-header__nav-item--icon-layout-none"
          >
            <span
              class="text text--label-lg"
            >
              Science
            </span>
          </button>
        </li>
        <li />
        <li>
          <a
            class="app-header__nav-item app-header__nav-item--link app-header__nav-item--icon-layout-none"
            href="https://example.org"
          >
            <span
              class="text text--label-lg"
            >
              Whole child
            </span>
          </a>
        </li>
      </ul>
    </nav>
    <nav
      aria-label="group-2"
    >
      <ul
        class="app-header-nav-group app-header-nav-group--orientation-horizontal"
      >
        <li>
          <a
            class="app-header__nav-item app-header__nav-item--link app-header__nav-item--icon-layout-left"
            href="https://example.org"
          >
            <span
              class="text text--label-lg"
            >
              Log out
            </span>
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="16px"
              style="--icon-size: 16px;"
              viewBox="0 0 24 24"
              width="16px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 21C4.45 21 3.97917 20.8042 3.5875 20.4125C3.19583 20.0208 3 19.55 3 19V5C3 4.45 3.19583 3.97917 3.5875 3.5875C3.97917 3.19583 4.45 3 5 3H11C11.2833 3 11.5208 3.09583 11.7125 3.2875C11.9042 3.47917 12 3.71667 12 4C12 4.28333 11.9042 4.52083 11.7125 4.7125C11.5208 4.90417 11.2833 5 11 5H5V19H11C11.2833 19 11.5208 19.0958 11.7125 19.2875C11.9042 19.4792 12 19.7167 12 20C12 20.2833 11.9042 20.5208 11.7125 20.7125C11.5208 20.9042 11.2833 21 11 21H5ZM17.175 13H10C9.71667 13 9.47917 12.9042 9.2875 12.7125C9.09583 12.5208 9 12.2833 9 12C9 11.7167 9.09583 11.4792 9.2875 11.2875C9.47917 11.0958 9.71667 11 10 11H17.175L15.3 9.125C15.1167 8.94167 15.025 8.71667 15.025 8.45C15.025 8.18333 15.1167 7.95 15.3 7.75C15.4833 7.55 15.7167 7.44583 16 7.4375C16.2833 7.42917 16.525 7.525 16.725 7.725L20.3 11.3C20.5 11.5 20.6 11.7333 20.6 12C20.6 12.2667 20.5 12.5 20.3 12.7L16.725 16.275C16.525 16.475 16.2875 16.5708 16.0125 16.5625C15.7375 16.5542 15.5 16.45 15.3 16.25C15.1167 16.05 15.0292 15.8125 15.0375 15.5375C15.0458 15.2625 15.1417 15.0333 15.325 14.85L17.175 13Z"
              />
            </svg>
          </a>
        </li>
      </ul>
    </nav>
  </div>
  <div
    class="app-header__menu"
  >
    <button
      aria-label="Show Menu"
      class="button button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-default"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 18h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1s.45 1 1 1zm0-5h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1s.45 1 1 1zM3 7c0 .55.45 1 1 1h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1z"
          />
        </svg>
      </span>
    </button>
  </div>
</header>
`;

exports[`<AppHeader /> Default story renders snapshot 1`] = `
<header
  class="app-header app-header--orientation-horizontal"
>
  <div
    class="app-header__titles"
  >
    <div
      class="app-header-title__title"
    >
      <span
        class="text text--headline-md"
      >
        Evaluators
      </span>
    </div>
    <div
      class="app-header-title__sub-title"
    >
      <span
        class="text text--body-lg"
      >
        Playground
      </span>
    </div>
  </div>
  <div
    class="app-header__nav-groups"
  >
    <nav
      aria-label="group-1"
    >
      <ul
        class="app-header-nav-group app-header-nav-group--orientation-horizontal"
      >
        <li>
          <a
            class="app-header__nav-item app-header__nav-item--link app-header__nav-item--icon-layout-none"
            href="https://example.org"
          >
            <span
              class="text text--label-lg"
            >
              English Language Arts
            </span>
          </a>
        </li>
        <li>
          <a
            class="app-header__nav-item app-header__nav-item--link app-header__nav-item--icon-layout-none"
            href="https://example.org"
          >
            <span
              class="text text--label-lg"
            >
              Science
            </span>
          </a>
        </li>
        <li>
          <a
            class="app-header__nav-item app-header__nav-item--link app-header__nav-item--icon-layout-none"
            href="https://example.org"
          >
            <span
              class="text text--label-lg"
            >
              Whole child
            </span>
          </a>
        </li>
      </ul>
    </nav>
    <nav
      aria-label="group-2"
    >
      <ul
        class="app-header-nav-group app-header-nav-group--orientation-horizontal"
      >
        <li>
          <a
            class="app-header__nav-item app-header__nav-item--link app-header__nav-item--icon-layout-left"
            href="https://example.org"
          >
            <span
              class="text text--label-lg"
            >
              Log out
            </span>
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="16px"
              style="--icon-size: 16px;"
              viewBox="0 0 24 24"
              width="16px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 21C4.45 21 3.97917 20.8042 3.5875 20.4125C3.19583 20.0208 3 19.55 3 19V5C3 4.45 3.19583 3.97917 3.5875 3.5875C3.97917 3.19583 4.45 3 5 3H11C11.2833 3 11.5208 3.09583 11.7125 3.2875C11.9042 3.47917 12 3.71667 12 4C12 4.28333 11.9042 4.52083 11.7125 4.7125C11.5208 4.90417 11.2833 5 11 5H5V19H11C11.2833 19 11.5208 19.0958 11.7125 19.2875C11.9042 19.4792 12 19.7167 12 20C12 20.2833 11.9042 20.5208 11.7125 20.7125C11.5208 20.9042 11.2833 21 11 21H5ZM17.175 13H10C9.71667 13 9.47917 12.9042 9.2875 12.7125C9.09583 12.5208 9 12.2833 9 12C9 11.7167 9.09583 11.4792 9.2875 11.2875C9.47917 11.0958 9.71667 11 10 11H17.175L15.3 9.125C15.1167 8.94167 15.025 8.71667 15.025 8.45C15.025 8.18333 15.1167 7.95 15.3 7.75C15.4833 7.55 15.7167 7.44583 16 7.4375C16.2833 7.42917 16.525 7.525 16.725 7.725L20.3 11.3C20.5 11.5 20.6 11.7333 20.6 12C20.6 12.2667 20.5 12.5 20.3 12.7L16.725 16.275C16.525 16.475 16.2875 16.5708 16.0125 16.5625C15.7375 16.5542 15.5 16.45 15.3 16.25C15.1167 16.05 15.0292 15.8125 15.0375 15.5375C15.0458 15.2625 15.1417 15.0333 15.325 14.85L17.175 13Z"
              />
            </svg>
          </a>
        </li>
      </ul>
    </nav>
  </div>
  <div
    class="app-header__menu"
  >
    <button
      aria-label="Show Menu"
      class="button button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-default"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 18h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1s.45 1 1 1zm0-5h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1s.45 1 1 1zM3 7c0 .55.45 1 1 1h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1z"
          />
        </svg>
      </span>
    </button>
  </div>
</header>
`;

exports[`<AppHeader /> VerticalOrientation story renders snapshot 1`] = `
<header
  class="app-header app-header--orientation-vertical"
>
  <div
    class="app-header__titles"
  >
    <div
      class="app-header-title__title"
    >
      <span
        class="text text--headline-md"
      >
        Evaluators
      </span>
    </div>
    <div
      class="app-header-title__sub-title"
    >
      <span
        class="text text--body-lg"
      >
        Playground
      </span>
    </div>
  </div>
  <div
    class="drawer-content"
  >
    <nav
      aria-label="group-1"
    >
      <ul
        class="drawer-content__nav-group"
      >
        <li
          class="drawer-content__nav-group-item drawer-content__nav-group-item--type-button"
        >
          <button
            class="app-header__nav-item app-header__nav-item--button app-header__nav-item--icon-layout-none"
          >
            <span
              class="text text--label-lg"
            >
              English Language Arts
            </span>
          </button>
        </li>
        <li
          class="drawer-content__nav-group-item drawer-content__nav-group-item--type-button"
        >
          <button
            class="app-header__nav-item app-header__nav-item--button app-header__nav-item--icon-layout-none"
          >
            <span
              class="text text--label-lg"
            >
              Science
            </span>
          </button>
        </li>
        <li
          class="drawer-content__nav-group-item drawer-content__nav-group-item--type-separator"
        >
          <hr
            class="hr"
            name="sep1"
            type="separator"
          />
        </li>
        <li
          class="drawer-content__nav-group-item drawer-content__nav-group-item--type-link"
        >
          <a
            class="app-header__nav-item app-header__nav-item--link app-header__nav-item--icon-layout-none"
            href="https://example.org"
          >
            <span
              class="text text--label-lg"
            >
              Whole child
            </span>
          </a>
        </li>
      </ul>
    </nav>
    <nav
      aria-label="group-2"
    >
      <ul
        class="drawer-content__nav-group"
      >
        <li
          class="drawer-content__nav-group-item drawer-content__nav-group-item--type-link"
        >
          <a
            class="app-header__nav-item app-header__nav-item--link app-header__nav-item--icon-layout-left"
            href="https://example.org"
          >
            <span
              class="text text--label-lg"
            >
              Log out
            </span>
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="16px"
              style="--icon-size: 16px;"
              viewBox="0 0 24 24"
              width="16px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 21C4.45 21 3.97917 20.8042 3.5875 20.4125C3.19583 20.0208 3 19.55 3 19V5C3 4.45 3.19583 3.97917 3.5875 3.5875C3.97917 3.19583 4.45 3 5 3H11C11.2833 3 11.5208 3.09583 11.7125 3.2875C11.9042 3.47917 12 3.71667 12 4C12 4.28333 11.9042 4.52083 11.7125 4.7125C11.5208 4.90417 11.2833 5 11 5H5V19H11C11.2833 19 11.5208 19.0958 11.7125 19.2875C11.9042 19.4792 12 19.7167 12 20C12 20.2833 11.9042 20.5208 11.7125 20.7125C11.5208 20.9042 11.2833 21 11 21H5ZM17.175 13H10C9.71667 13 9.47917 12.9042 9.2875 12.7125C9.09583 12.5208 9 12.2833 9 12C9 11.7167 9.09583 11.4792 9.2875 11.2875C9.47917 11.0958 9.71667 11 10 11H17.175L15.3 9.125C15.1167 8.94167 15.025 8.71667 15.025 8.45C15.025 8.18333 15.1167 7.95 15.3 7.75C15.4833 7.55 15.7167 7.44583 16 7.4375C16.2833 7.42917 16.525 7.525 16.725 7.725L20.3 11.3C20.5 11.5 20.6 11.7333 20.6 12C20.6 12.2667 20.5 12.5 20.3 12.7L16.725 16.275C16.525 16.475 16.2875 16.5708 16.0125 16.5625C15.7375 16.5542 15.5 16.45 15.3 16.25C15.1167 16.05 15.0292 15.8125 15.0375 15.5375C15.0458 15.2625 15.1417 15.0333 15.325 14.85L17.175 13Z"
              />
            </svg>
          </a>
        </li>
      </ul>
    </nav>
  </div>
</header>
`;
